# dinov2

./: pyproject.toml
dinov2/configs/: ssl_default_config.yaml
dinov2/configs/train/: vitb14.yaml
dinov2/data/: loaders.py
dinov2/data/datasets/: antiquities.py
dinov2/eval/: retrieval.py
dinov2/train/: ssl_meta_arch.py  train.py
